JumpScript/tests/baselines/reference/FunctionDeclaration7.errors.txt
tests/cases/compiler/FunctionDeclaration7.jump(2,13): error TS2391: Function implementation is missing or not immediately following the declaration.


==== tests/cases/compiler/FunctionDeclaration7.jump (1 errors) ====
    module M {
       function foo();
                ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    }